[package]
name = "gawk"
version = "0.3.0"
edition = "2024"
description = "A simple, flexible observer pattern implementation"
repository = "https://github.com/hollg/gawk"
homepage = "https://github.com/hollg/gawk"
license = "MIT"
readme = "../README.md"

[dependencies]
gawk_derive = {path = "../gawk_derive", version = "0.1.0"}
