[package]
name = "crier"
version = "0.3.3"
edition = "2024"
description = "A simple but flexible observer library"
repository = "https://github.com/hollg/crier"
homepage = "https://github.com/hollg/crier"
license = "MIT"
readme = "../README.md"

[dependencies]
crier_derive = {path = "../crier_derive", version = "0.1.0"}
